# SSKRR-public

./: .cursorrules  README.md  config.yaml  main_SSKRR.ipynb  main_sskrr.py  pyproject.toml
lib/: JNodeWt.py  JacobiGL.py  JacobiGQ.py  JacobiGR.py  JacobiP.py  LHS.py  MPJacn.py  MultiIndex.py  PJacn.py  krr_helpers.py
tests/: test_jacobi.py  test_main_sskrr.py
