[project]
name = "02-sskrr"
version = "0.1.0"
description = "SSKRR (Sparse Spectral Kernel Ridge Regression) method implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.14.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "pyro-ppl>=1.8.0",
    "spgl1>=0.0.2",
    "scikit-learn>=1.0.0",
    "smt>=2.0.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0.0",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
